--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
 <footer class="py-5 bg-dark">
   <div class="container">
     <p class="m-0 text-center text-white">
-      :copyright: 2021-2024 - Simplilearn Solutions. All Rights Reserved.
+      :copyright: 2021-2024 - Techfios Solutions. All Rights Reserved.
     </p>
   </div>
 
